<resources>
    <string name="app_name">Segundo_Formulario</string>


    <string name="datos_personales">Datos personales</string>
    <string name="datos_empleado">Datos empleado</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="telefono">Telefono</string>
    <string name="sueldo">Sueldo</string>
    <string name="prima">Prima</string>
    <string name="calcular">calcular</string>
    <string name="total">Total</string>
    <string name="empleados">EMPLEADOS</string>

</resources>
